añado las imágenes

--- a/IOC_Institut_Obert_De_Catalunya/62. Interfaces gráficas de usuario.md
+++ b/IOC_Institut_Obert_De_Catalunya/62. Interfaces gráficas de usuario.md
@@ -70,7 +70,7 @@
 
 # Mapa conceptual
 
-![wdamm03u4_mapa.png](../_resources/wdamm03u4_mapa.png)
+![62_00_Mapa_Conceptual.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_00_Mapa_Conceptual.png)
 
 * * *
 
@@ -133,7 +133,7 @@
     - Necesitamos instanciar la clase pertinente.
 - **Esquema de una pequeña parte de la jerarquía de clases Swing:**
 
-![ic10m03u4_02.png](../_resources/ic10m03u4_02.png)
+![62_01_Jerarquia_Clases_Swing.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_01_Jerarquia_Clases_Swing.png)
 
 - **Qué es un componente?**
     
@@ -287,7 +287,7 @@
     - Mediante el método getContentPane().
 - **Ejemplo de cómo se representaría una interfaz gráfica concreta en forma de mapa de objetos y su clasificación por tipos. Estructura de una calculadora simple:**
 
-![62_3_Representacion_Interfaz_Grafica_Mapa_Objetos.png](../_resources/62_3_Representacion_Interfaz_Grafica_Mapa_Objetos.png)
+![62_03_Representacion_Interfaz_Grafica_Mapa_Objetos.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_03_Representacion_Interfaz_Grafica_Mapa_Objetos.png)
 
 - **Qué tenemos que lograr cuando creamos la interfaz gráfica con Swing?**
     - Que todo acabe estando vinculado a un contenedor top-level de la aplicación:
@@ -352,7 +352,7 @@
     - Control que combina: JMenuItem + JRadioButtonMenu.
 - **Ejemplo con todos los componentes posibles de una barra de menús.**
 
-![62_2_Todos_Componentes_Posibles_Barra_Menu.png](../_resources/62_2_Todos_Componentes_Posibles_Barra_Menu.png)
+![62_2_Todos_Componentes_Posibles_Barra_Menu.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_02_Todos_Componentes_Posibles_Barra_Menu.png)
 
 - **Qué método usan los menús para añadir componentes a los contenedores?**
     - add(Component comp)
@@ -458,7 +458,7 @@
     - public FlowLayout().
 - **Ejemplo de como cambia la ubicación de los componentes en el caso de redimensionar el contenedor en FlowLayout.**
 
-**![62_4_Ejemplo_Redimension_FlowLayout.png](../_resources/62_4_Ejemplo_Redimension_FlowLayout.png)**
+![62_04_Ejemplo_Redimension_FlowLayout.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_04_Ejemplo_Redimension_FlowLayout.png)
 
 ### **BorderLayout**
 
@@ -492,7 +492,7 @@
     - BorderLayout.CENTER
 - **Ejemplo de redimensión de un contenedor que usa el *layout* BorderLayout:**
 
-![62_5_Ejemplo_Redimension_BorderLayout.png](../_resources/62_5_Ejemplo_Redimension_BorderLayout.png)
+![62_05_Ejemplo_Redimension_BorderLayout.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_05_Ejemplo_Redimension_BorderLayout.png)
 
 ### GridLayout
 
@@ -512,7 +512,7 @@
     - Indica la cantidad de columnas.
 - **Ejemplo de redimensionado de un GridLayout:**
 
-![62_6_Ejemplo_Redimension_GridLayout.png](../_resources/62_6_Ejemplo_Redimension_GridLayout.png)
+![62_06_Ejemplo_Redimension_GridLayout.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_06_Ejemplo_Redimension_GridLayout.png)
 
 ### BoxLayout
 
@@ -532,7 +532,7 @@
         - Box alineaHorizontal = Box.createHorizontalBox();
 - **Ejemplo de redimensionado de un contenedor Box de alineación vertical:**
 
-![62_7_Ejemplo_Redimension_BoxLayout.png](../_resources/62_7_Ejemplo_Redimension_BoxLayout.png)
+![62_07_Ejemplo_Redimension_BoxLayout.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_07_Ejemplo_Redimension_BoxLayout.png)
 
 - **Cuáles son los 2 componentes especiales que solo pueden añadir mediante add los contenedores Box (ningún otro *layout* puede usarlos)?**
     - Struts y Glues verticales
@@ -551,7 +551,7 @@
     - Hace que dos componentes separados por un Glue siempre se ubiquen lo más separado posible el uno del otro según el espacio que haya.
 - **Ejemplo de aplicación de Struts y Glues:**
 
-![62_8_Ejemplo_Struts_Glues.png](../_resources/62_8_Ejemplo_Struts_Glues.png)
+![62_08_Ejemplo_Struts_Glues.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_08_Ejemplo_Struts_Glues.png)
 
 ### CardLayout
 
@@ -575,7 +575,7 @@
             - Salta al componente añadido justo antes del visualizado actualmente.
 - **Esquema del funcionamiento del CardLayout: Muestra como se alternan los componentes de un CardLayout:**
 
-**![62_9_Esquema_Funcionamiento_CardLayout.png](../_resources/62_9_Esquema_Funcionamiento_CardLayout.png)**
+![62_09_Esquema_Funcionamiento_CardLayout.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_09_Esquema_Funcionamiento_CardLayout.png)
 
 ### **GridBagLayout**
 
@@ -633,7 +633,7 @@
     - LAST\_LINE\_START
 - **Ejemplo de redimensionado de GridBagLayout. Las líneas de separación entre celdas en realidad no se ven. El componente 5 está añadido con un anchor de LAST\_LINE\_END:**
 
-![62_10_Ejemplo_Redimension_GridBagLayout.png](../_resources/62_10_Ejemplo_Redimension_GridBagLayout.png)
+![62_10_Ejemplo_Redimension_GridBagLayout.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_10_Ejemplo_Redimension_GridBagLayout.png)
 
 ### GroupLayout
 
@@ -695,11 +695,11 @@
 
 - **Ejemplo de GroupLayout secuencial (eje horizontal) y paralelo (eje vertical). Cada componente visualizado (1, 2, 3) pertenece a ambos grupos y se han añadido al grupo en orden incremental. Los espacios entre elementos en realidad no existirían:**
 
-![62_11_Ejemplo_GroupLayout_secuencial_paralelo.png](../_resources/62_11_Ejemplo_GroupLayout_secuencial_paralelo.png)
+![62_11_Ejemplo_GroupLayout_secuencial_paralelo.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_11_Ejemplo_GroupLayout_secuencial_paralelo.png)
 
 - **Ejemplo de GroupLayout secuencial (eje horizontal) y secuencial (eje vertical). Muestra cómo se ubicarían los componentes si los dos grupos fuesen secuenciales en los dos ejes:**
 
-![62_12_Ejemplo_GroupLayout_secuencial_secuencial.png](../_resources/62_12_Ejemplo_GroupLayout_secuencial_secuencial.png)
+![62_12_Ejemplo_GroupLayout_secuencial_secuencial.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_12_Ejemplo_GroupLayout_secuencial_secuencial.png)
 
 * * *
 
@@ -707,7 +707,7 @@
 
 - **Ejemplo de combinación de layouts para generar una interfaz gráfica compleja:**
 
-![62_13_Ejemplo_Combinacion_Layouts.png](../_resources/62_13_Ejemplo_Combinacion_Layouts.png)
+![62_13_Ejemplo_Combinacion_Layouts.png](https://github.com/sufigueroa87/Apuntes/blob/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_13_Ejemplo_Combinacion_Layouts.png)
 
 - **Ejemplo de cómo combinar diferentes layouts para generar la calculadora mostrada anteriormente: combinamos BorderLayout con GridLayout:**
 
@@ -740,7 +740,7 @@
     - Que todo sigue igual, no se redimensionan los componentes. Por tanto quedará un espacio sin nada al ampliar la ventana.
 - **Ejemplo de redimensión de un layout absoluto:**
 
-![62_14_Ejemplo_Redimension_Layout_Absoluto.png](../_resources/62_14_Ejemplo_Redimension_Layout_Absoluto.png)
+![62_14_Ejemplo_Redimension_Layout_Absoluto.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_14_Ejemplo_Redimension_Layout_Absoluto.png)
 
 - **Se encuentran los layouts absolutos en las bibliotecas estándar de Java?**
     - NO, se necesita incluirlos como clases adicionales dentro de las aplicaciones que los usen porque sino no funcionarán.
@@ -811,7 +811,7 @@
 
 - **Resumen de las interacciones entre los objetos de los 3 conjuntos del MVC:**
 
-**![62_15_Resumen_Interacciones_3Conjuntos_MVC.png](../_resources/62_15_Resumen_Interacciones_3Conjuntos_MVC.png)**
+![62_15_Resumen_Interacciones_3Conjuntos_MVC.png](.https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_15_Resumen_Interacciones_3Conjuntos_MVC.png)
 
 - **Qué 2 beneficios principales aporta el uso del MVC?**
     - Más reutilización de las clases:
@@ -866,7 +866,7 @@
     - No, solo pueden generar los eventos asociados a las interacciones que pueden recibir.
 - **Ejemplo de evento: MouseEvent:**
 
-![62_16_Ejemplo_Acontecimiento_MouseEvent.png](../_resources/62_16_Ejemplo_Acontecimiento_MouseEvent.png)
+![62_16_Ejemplo_Acontecimiento_MouseEvent.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_16_Ejemplo_Acontecimiento_MouseEvent.png)
 
 * * *
 
@@ -904,11 +904,11 @@
     - Tantos Listeners como eventos genere.
 - **Ejemplo de registro de Listeners y captura de eventos:**
 
-![62_17_Ejemplo_Listeners_Captura_Eventos.png](../_resources/62_17_Ejemplo_Listeners_Captura_Eventos.png)
+![62_17_Ejemplo_Listeners_Captura_Eventos.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_17_Ejemplo_Listeners_Captura_Eventos.png)
 
 - **Ejemplo de algunos Listeners típicos, con sus métodos definidos:**
 
-![62_18_Ejemplo_Listeners_Metodos.png](../_resources/62_18_Ejemplo_Listeners_Metodos.png)
+![62_18_Ejemplo_Listeners_Metodos.png]()
 
 - **Qué sucede cuando un Listener captura un evento?**
     - Inmediatamente llama al método correspondiente a la acción más concreta que ha llevado a cabo la generación del evento.
@@ -916,7 +916,7 @@
     - Se produce la llamada al método mouseClicked, que corresponde a la acción más concreta que ha llevado a cabo la generación del evento MouseEvent.
 - **Ejemplo de llamada de los métodos a los Listeners:**
 
-![62_19_Ejemplo_LlamadaMetodos_Listeners.png](../_resources/62_19_Ejemplo_LlamadaMetodos_Listeners.png)
+![62_19_Ejemplo_LlamadaMetodos_Listeners.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_19_Ejemplo_LlamadaMetodos_Listeners.png)
 
 - **Cómo se encuentran definidos los diferentes tipos de Listener dentro de la biblioteca gráfica de Java?**
     - Como interfaces.
@@ -933,7 +933,7 @@
     - En cada una de las clases creadas que implementan la interfaz ActionListener, sobreescribiremos el método actionPerformed, modificándolo según lo que necesitemos que haga dicho método (y en consecuencia cada distinto botón).
 - **Asignación de código a los eventos usando métodos polimórficos y usando el patrón MVC:**
 
-![62_20_Asignacion_Codigo_Eventos_MetodosPolimórficos_MVC.png](../_resources/62_20_Asignacion_Codigo_Eventos_MetodosPolimórfico.png)
+![62_20_Asignacion_Codigo_Eventos_MetodosPolimórficos_MVC.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_20_Asignacion_Codigo_Eventos_MetodosPolim%C3%B3rficos_MVC.png)
 
 - **Si tenemos distintos componentes que generan el mismo tipo de evento, podemos reutilizar el objeto Listener que recoge este tipo de evento?**
     - Sí.
@@ -1137,7 +1137,7 @@
     }
 ```
 
-![62_21_Panel_Opcion.png](../_resources/62_21_Panel_Opcion.png)
+![62_21_Panel_Opcion.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_21_Panel_Opcion.png)
 
 - **Cómo podemos realizar un panel de opciones?**
     
@@ -1351,7 +1351,7 @@
     JTable table = new JTable(new MyTableModel);
 ```
 
-![62_22_Ejemplo_JTable.png](../_resources/62_22_Ejemplo_JTable.png)
+![62_22_Ejemplo_JTable.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_22_Ejemplo_JTable.png)
 
 - **Qué 2 subclases proporciona Swing para ahorrarnos la faena de implementar los métodos definidos en la interfaz TableModel?**
     - AbstractTableModel:
@@ -1406,4 +1406,4 @@
     JTree tree = new JTree(new MyTreeModel());
 ```
 
-![62_23_Ejemplo_JTree.png](../_resources/62_23_Ejemplo_JTree.png)
+![62_23_Ejemplo_JTree.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_23_Ejemplo_JTree.png)
