añado las imágenes 62_15 y 62_18

--- a/IOC_Institut_Obert_De_Catalunya/62. Interfaces gráficas de usuario.md
+++ b/IOC_Institut_Obert_De_Catalunya/62. Interfaces gráficas de usuario.md
@@ -811,7 +811,7 @@
 
 - **Resumen de las interacciones entre los objetos de los 3 conjuntos del MVC:**
 
-![62_15_Resumen_Interacciones_3Conjuntos_MVC.png](.https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_15_Resumen_Interacciones_3Conjuntos_MVC.png)
+![62_15_Resumen_Interacciones_3Conjuntos_MVC.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_15_Resumen_Interacciones_3Conjuntos_MVC.png)
 
 - **Qué 2 beneficios principales aporta el uso del MVC?**
     - Más reutilización de las clases:
@@ -908,7 +908,7 @@
 
 - **Ejemplo de algunos Listeners típicos, con sus métodos definidos:**
 
-![62_18_Ejemplo_Listeners_Metodos.png]()
+![62_18_Ejemplo_Listeners_Metodos.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/62_18_Ejemplo_Listeners_Metodos.png)
 
 - **Qué sucede cuando un Listener captura un evento?**
     - Inmediatamente llama al método correspondiente a la acción más concreta que ha llevado a cabo la generación del evento.
