66. Aplicaciones con BD orientadas a objetos.

--- a/IOC_Institut_Obert_De_Catalunya/66. Aplicaciones con BD orientadas a objetos.md
+++ b/IOC_Institut_Obert_De_Catalunya/66. Aplicaciones con BD orientadas a objetos.md
@@ -645,16 +645,18 @@ EmbeddedConfiguration config = Db4oEmbedded.newConfiguration();
     }
 ```
 
-- - Un jugador pot tenir diversos ítems amb el mateix nom. -> false
-        \- **Un jugador pot tenir diversos ítems amb el mateix pes. -> VERITAT**
-        \- Una sala pot tenir diferents sortides amb el mateix nom. -> false
-        \- Una sortida pot anar a parar a diverses sales, però mai repetides. -> false
-        \- **Al programa poden haver-hi sales amb el mateix nom. -> VERITAT**
-        \- **Al programa poden haver-hi sales amb la mateixa descripció. -> VERITAT**
-        \- **Al programa poden haver-hi jugadors amb el mateix nom. -> VERITAT**
-        \- **Al programa poden haver-hi jugadors amb un mateix ítem. -> VERITAT**
-        \- **Al programa poden haver-hi jugadors amb la mateixa ubicació. -> VERITAT**
-        \- **No hi pot haver cap ítem a cap sala. -> VERITAT**
+  - Un jugador pot tenir diversos ítems amb el mateix nom. -> false
+  - **Un jugador pot tenir diversos ítems amb el mateix pes. -> VERITAT**
+  - Una sala pot tenir diferents sortides amb el mateix nom. -> false
+  - Una sortida pot anar a parar a diverses sales, però mai repetides. -> false
+  - **Al programa poden haver-hi sales amb el mateix nom. -> VERITAT**
+  - **Al programa poden haver-hi sales amb la mateixa descripció. -> VERITAT**
+  - **Al programa poden haver-hi jugadors amb el mateix nom. -> VERITAT**
+  - **Al programa poden haver-hi jugadors amb un mateix ítem. -> VERITAT**
+  - **Al programa poden haver-hi jugadors amb la mateixa ubicació. -> VERITAT**
+  - **No hi pot haver cap ítem a cap sala. -> VERITAT**
+  
+  
 - **Dada la consulta siguiente, elige la opción correcta:**
 
 ```Java
@@ -663,10 +665,12 @@ EmbeddedConfiguration config = Db4oEmbedded.newConfiguration();
     WHERE c.nom = "Client1"
 ```
 
-- - En una BDOO *db4o*, és possible fer-ho usant una cerca per exemple. -> false
-        \- En una BDOO *db4o*, és possible fer-ho usant una cerca nativa. -> false
-        \- En una BDOO basada en JDO, és possible fer-ho usant una cerca `query.execute(…)`. -\> false
-        \- **Cap de les anteriors afirmacions és certa. -> VERITAT**
+  - En una BDOO *db4o*, és possible fer-ho usant una cerca per exemple. -> false
+  - En una BDOO *db4o*, és possible fer-ho usant una cerca nativa. -> false
+  - En una BDOO basada en JDO, és possible fer-ho usant una cerca `query.execute(…)`. -\> false
+  - **Cap de les anteriors afirmacions és certa. -> VERITAT**
+  
+  
 - **Es disposa de la classe següent, els objectes de la qual estan emmagatzemats en una BDOO *db4o*. Per gestionar-los, només es volen usar cerques per exemple (*Queries-By-Example*).**
 
 ```Java
@@ -679,22 +683,24 @@ EmbeddedConfiguration config = Db4oEmbedded.newConfiguration();
     }
 ```
 
-- - És possible fer cercar l’assignatura que té un nom concret. -> false
-        - **És possible cercar les assignatures amb una temàtica concreta. -> VERITAT **
-        - **És possible cercar les assignatures de sis crèdits. -> VERITAT**
-        - És possible cercar l’assignatura amb menys crèdits. -> false
-        - És possible cercar les assignatures que no s’han obert mai. -> false
-        - És possible cercar les assignatures obertes almenys un cop. -> false
-        - És possible cercar l’assignatura amb més estudiants actualment. -> false
-        - És possible cercar les assignatures sense estudiants actualment. -> false
+  - És possible fer cercar l’assignatura que té un nom concret. -> false
+  - **És possible cercar les assignatures amb una temàtica concreta. -> VERITAT **
+  - **És possible cercar les assignatures de sis crèdits. -> VERITAT**
+  - És possible cercar l’assignatura amb menys crèdits. -> false
+  - És possible cercar les assignatures que no s’han obert mai. -> false
+  - És possible cercar les assignatures obertes almenys un cop. -> false
+  - És possible cercar l’assignatura amb més estudiants actualment. -> false
+  - És possible cercar les assignatures sense estudiants actualment. -> false
+  
 - **Completa las afirmaciones con la palabra que consideres más adecuada:**
-    - En obrir una BDOO *db4o* s’obté un… -> ObjectContainer
-    - En obrir una BDOO JDO s’obté un… -> PersistenceManager
-    - Per fer cerques simples en una BDOO *db4o* s’usa el mètode… -> queryByExample
-    - Per fer cerques complexes en una BDOO *db4o* s’usa el mètode… -> query
-    - Per fer cerques en una BDOO JDO s’usa el mètode… -> execute
-    - Per fer emmagatzemar objectes en una BDOO *db4o* s’usa el mètode… -> store
-    - Per fer emmagatzemar objectes en una BDOO JDO s’usa el mètode… -> makePersistent
+  - En obrir una BDOO *db4o* s’obté un… -> ObjectContainer
+  - En obrir una BDOO JDO s’obté un… -> PersistenceManager
+  - Per fer cerques simples en una BDOO *db4o* s’usa el mètode… -> queryByExample
+  - Per fer cerques complexes en una BDOO *db4o* s’usa el mètode… -> query
+  - Per fer cerques en una BDOO JDO s’usa el mètode… -> execute
+  - Per fer emmagatzemar objectes en una BDOO *db4o* s’usa el mètode… -> store
+  - Per fer emmagatzemar objectes en una BDOO JDO s’usa el mètode… -> makePersistent
+  
 - **Tria l'opció correcta:**
 
 ```Java
@@ -711,7 +717,7 @@ EmbeddedConfiguration config = Db4oEmbedded.newConfiguration();
     }
 ```
 
-- - Aquest codi és correcte i no crea cap inconsistència a la BDO. -> false
-    - Aquest codi és incorrecte; sempre hi haurà inconsistències a la BDOO. -> false
-    - **Aquest codi és incorrecte, però no sempre crearà inconsistències a la BDOO.  -> VERITAT**
-    - Aquest codi és redundant, ja que no cal el bucle. -> false
+  - Aquest codi és correcte i no crea cap inconsistència a la BDO. -> false
+  - Aquest codi és incorrecte; sempre hi haurà inconsistències a la BDOO. -> false
+  - **Aquest codi és incorrecte, però no sempre crearà inconsistències a la BDOO.  -> VERITAT**
+  - Aquest codi és redundant, ja que no cal el bucle. -> false
