65. Aplicaciones con BD no orientadas a objetos.

--- a/IOC_Institut_Obert_De_Catalunya/65. Aplicaciones con BD no orientadas a objetos.md
+++ b/IOC_Institut_Obert_De_Catalunya/65. Aplicaciones con BD no orientadas a objetos.md
@@ -879,14 +879,20 @@ etc.
 
 ![65_05_Ejercicio1.png](https://raw.githubusercontent.com/sufigueroa87/Apuntes/main/IOC_Institut_Obert_De_Catalunya/Im%C3%A1genes/65_05_Ejercicio1.png)
 
-- - **Segurament la taula Sessions era una classe associativa al diagrama UML original. -> VERITAT**
-        \- La columna **Nom** serveix com a clau primària de la taula **Sales**. -\> FALS
-        \- **En la taula Activitats hi poden haver files amb el mateix Nom. -> VERITAT**
-        \- **Donat el nom d’una activitat, es pot obtenir una llista amb totes les sales on es practica. -> VERITAT**
-        \- **En la taula Sessions, la columna Activitat desa claus foranes. -> VERITAT**
-        \- No té sentit que existeixi la fila 2 de la taula **Sales**, ja que no s’usa enlloc.  -> FALS
+- **Segurament la taula Sessions era una classe associativa al diagrama UML original. -> VERITAT**
+  - La columna **Nom** serveix com a clau primària de la taula **Sales**. -\> FALS
+  - **En la taula Activitats hi poden haver files amb el mateix Nom. -> VERITAT**
+  - **Donat el nom d’una activitat, es pot obtenir una llista amb totes les sales on es practica. -> VERITAT**
+  - **En la taula Sessions, la columna Activitat desa claus foranes. -> VERITAT**
+  - No té sentit que existeixi la fila 2 de la taula **Sales**, ja que no s’usa enlloc.  -> FALS
+  
+***
+  
 - **Elige la opción correcta:**
-    - Quina expressió SQL permet incloure expressions regulars en la seva sintaxi? -> LIKE
+  - Quina expressió SQL permet incloure expressions regulars en la seva sintaxi? -> LIKE
+
+***
+
 - **Dada la tabla creada de la manera siguiente y las sentencias SQL siguientes, di si es verdadero o no:**
 
 ```Java
@@ -916,21 +922,27 @@ etc.
     WHERE PREU > AVG(PREU)
 ```
 
-- - En total s’han executat vuit sentències SQL. -> false
-    - Al final, a la taula hi ha emmagatzemats tres productes, ja que hi ha alguna sentència INSERT errònia. -> false
-    - **Al final, a la taula hi ha emmagatzemats quatre productes, ja que hi ha alguna sentència INSERT errònia. -> VERITAT**
-    - Al final, hi ha emmagatzemats cinc productes a la taula. -> false
-    - **La taula no accepta qualsevol nom de producte. -> VERITAT**
-    - La consulta final mostra el preu dels productes. -> false
-    - La consulta final mostra el preu mitjà dels productes. -> false
-    - Només un únic producte a la taula compleix la condició de la consulta. -> false
+  - En total s’han executat vuit sentències SQL. -> false
+  - Al final, a la taula hi ha emmagatzemats tres productes, ja que hi ha alguna sentència INSERT errònia. -> false
+  - **Al final, a la taula hi ha emmagatzemats quatre productes, ja que hi ha alguna sentència INSERT errònia. -> VERITAT**
+  - Al final, hi ha emmagatzemats cinc productes a la taula. -> false
+  - **La taula no accepta qualsevol nom de producte. -> VERITAT**
+  - La consulta final mostra el preu dels productes. -> false
+  - La consulta final mostra el preu mitjà dels productes. -> false
+  - Només un únic producte a la taula compleix la condició de la consulta. -> false
+  
+***
+  
 - **Identifica la clase según su descripción:**
-    - És el resultat d’executar una consulta usant JDBC… -> ResultSet
-    - Encapsula una consulta SQL a JDBC… -> Statement
-    - Encapsula una consulta SQL parametritzada a JDBC… -> PreparedStatement
-    - Crea una connexió amb la BDD… . -> Connection
-    - Gestiona els controladors d’accés a la BDD…. -> DriverManager
-    - Informa d’errors en l’accés a la BDD…. -> SQLException
+  - És el resultat d’executar una consulta usant JDBC… -> ResultSet
+  - Encapsula una consulta SQL a JDBC… -> Statement
+  - Encapsula una consulta SQL parametritzada a JDBC… -> PreparedStatement
+  - Crea una connexió amb la BDD… . -> Connection
+  - Gestiona els controladors d’accés a la BDD…. -> DriverManager
+  - Informa d’errors en l’accés a la BDD…. -> SQLException
+  
+***
+  
 - **Dado el código Java siguiente, elige la afirmación más adecuada:**
 
 ```Java
@@ -949,7 +961,7 @@ etc.
     ...
 ```
 
-- - Hi ha perill d’SQL-Injection.
-    - Si hi ha perill o no d’SQL-Injection depèn totalment de com s’hagi fet el mètode “entrarDadesString”.
-    - Si hi ha perill o no d’SQL-Injection depèn totalment de com s’hagi fet el mètode “entrarDadesInt”.
-    - **No hi ha perill d’SQL-Injection. -> VERDADERA**
+- Hi ha perill d’SQL-Injection.
+  - Si hi ha perill o no d’SQL-Injection depèn totalment de com s’hagi fet el mètode “entrarDadesString”.
+  - Si hi ha perill o no d’SQL-Injection depèn totalment de com s’hagi fet el mètode “entrarDadesInt”.
+  - **No hi ha perill d’SQL-Injection. -> VERDADERA**
